Bug 33639 - gcj generates assembler errors
Summary: gcj generates assembler errors
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: java (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Andrew Haley
URL:
Keywords:
: 32484 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-10-03 12:58 UTC by Andrew Haley
Modified: 2008-01-15 15:32 UTC (History)
4 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Haley 2007-10-03 12:58:03 UTC
This is from https://bugzilla.redhat.com/show_bug.cgi?id=297961

The problem is that .class files can now (as of Java 1.5) contain classes whose name contains a hyphen.  The mangling used to generate internal labels in gcj passes these hyphens through to the assembler rather than mangling them.
Comment 1 Andrew Haley 2007-10-03 13:00:15 UTC
Subject: Bug 33639

Author: aph
Date: Wed Oct  3 12:59:57 2007
New Revision: 128981

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=128981
Log:
2007-10-03  Andrew Haley  <aph@redhat.com>

        PR java/33639
        * class.c (mangled_classname): Detect and replace illegal
        characters in assembly language symbols.
        (gen_indirect_dispatch_tables): Call mangled_classname() on
        the type.


Modified:
    trunk/gcc/java/ChangeLog
    trunk/gcc/java/class.c

Comment 2 Andrew Haley 2007-10-03 13:02:57 UTC
Fixed.
Comment 3 Andrew Haley 2008-01-15 15:32:36 UTC
*** Bug 32484 has been marked as a duplicate of this bug. ***